为eureka注册服务添加了security权限校验

--- a/consumer_demo/src/main/resources/application.properties
+++ b/consumer_demo/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.port=8083
 # spring
 spring.application.name=consumer-demo
 ##eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka/
+eureka.security.user=admin
+eureka.security.password=0yISPVfmWKwwiBIAyWCCNoBd8Yx6JNGd
+eureka.client.serviceUrl.defaultZone=http://${eureka.security.user}:${eureka.security.password}@localhost:8081/eureka/
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 # 设置微服务调用地址为IP优先（缺省为false）
 eureka.instance.prefer-ip-address=true
