--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 ## server
 server.port=8081
-
 ## spring
 spring.application.name=eureka-server
+spring.security.user.name=admin
+spring.security.user.password=0yISPVfmWKwwiBIAyWCCNoBd8Yx6JNGd
 ## eureka
+eureka.instance.hostname=localhost
 # 设置是否将自己作为客户端注册到注册中心（缺省true）
 eureka.client.register-with-eureka=false
 # 设置是否从注册中心获取注册信息（缺省true）
 # 因为这是一个单点的EurekaServer，不需要同步其它EurekaServer节点的数据，故设为false
 eureka.client.fetch-registry=false
-eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 #是否开启自我保护模式，默认为true。
 #eureka.server.enable-self-preservation=true
